--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -25,14 +25,20 @@ import {TbComponents} from 'react-icons/tb';
   <Text pl="1">
     <b>
       This feature is only available with a{' '}
-      <Link color={'primary'} href="/graphos/enterprise/">
+      <Link
+        color={'primary'}
+        href="https://www.apollographql.com/docs/graphos/enterprise/"
+      >
         GraphOS Enterprise plan
       </Link>
       .
     </b>{' '}
     If your organization doesn't currently have an Enterprise plan, you can test
     this functionality by signing up for a free{' '}
-    <Link color={'primary'} href="/graphos/org/plans/#enterprise-trials">
+    <Link
+      color={'primary'}
+      href="https://www.apollographql.com/docs/graphos/org/plans/#enterprise-trials"
+    >
       Enterprise trial
     </Link>
     .
