Document new components

--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -3,6 +3,16 @@ title: Self-hosted routing in GraphOS
 description: Host your supergraph's router in your own infrastructure
 ---
 
+<EnterpriseFeature />
+
+<EnterpriseFeature
+  text={`**The following requires a GraphOS Enterprise plan**:
+- Reporting metrics from a [monograph](../graphs/#monographs)
+- [self-hosted supergraph](../graphs/#self-hosted-supergraphs)
+- Forwarding metrics from [Apollo Server](/apollo-server/)\n
+If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).`}
+/>
+
 > ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
 >
 > **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
