Update wording of GraphOS Enterprise callout.

--- a/src/content/technotes/TN0001-client-id-enforcement.mdx
+++ b/src/content/technotes/TN0001-client-id-enforcement.mdx
@@ -59,7 +59,7 @@ fn process_request(request) {
 
 > If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Router extensibility](https://www.apollographql.com/tutorials/router-extensibility) course on Odyssey.
 >
-> Not an enterprise customer? [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
+> Not an enterprise customer? [Learn about GraphOS for Enterprise.](https://www.apollographql.com/pricing/)
 
 ## Enforcing in Apollo Server
 
