--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -7,7 +7,7 @@ tags: [schema-design]
 
 > If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 >
-> Not an enterprise customer? [Learn about GraphOS for Enterprise.](https://www.apollographql.com/pricing/)
+> Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
 
 ## Enforcing conventions
 
