--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -10,7 +10,7 @@ tags: [server, observability]
 
 > If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Supergraph observability](https://www.apollographql.com/tutorials/supergraph-observability) course on Odyssey.
 >
-> Not an enterprise customer? [Learn about GraphOS for Enterprise.](https://www.apollographql.com/pricing/)
+> Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
 
 Operation traces provide insight into performance issues that are occurring at various execution points in your graph. However, individual traces don't provide a view of your graph's broader performance.
 
