Correct Enterprise callouts for reporting metrics

--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -13,11 +13,12 @@ If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [
 
 Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
-> The following require an [Enterprise plan](https://www.apollographql.com/pricing/):
->
-> - Reporting metrics from Apollo Server or a [monograph](../graphs/#monographs)
-> - Connecting a self-hosted router to GraphOS
-> - Forwarding metrics to Datadog
+<EnterpriseFeature
+  text={`Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans).\n\nThe following require an [Enterprise plan](https://www.apollographql.com/pricing/):
+- Connecting a self-hosted router to GraphOS
+- Forwarding metrics to Datadog
+`}
+/>
 
 ## Insights and analysis
 
