--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -180,7 +180,11 @@ A requested field might not be resolved for any of these reasons:
 
 #### `@key` and `@requires` fields in a federated graph
 
-> This case applies only to graphs that use [Apollo Federation](/federation).
+<Note>
+
+This case applies only to graphs that use [Apollo Federation](/federation).
+
+</Note>
 
 Let's say our federated graph includes these two subgraph schemas:
 
