--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -3,7 +3,7 @@ title: Build status notifications
 description: Receive webhook alerts whenever GraphOS attempts to build a new supergraph schema
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 <PreviewFeature />
 
