--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -3,9 +3,13 @@ title: Performance alerts from GraphOS Studio
 description: Receive notifications whenever metrics exceed defined thresholds
 ---
 
-<ExperimentalFeature />
+<Note>
 
-> Performance alerts require a [paid plan](https://www.apollographql.com/pricing/).
+This feature is only available with a [paid plan](https://www.apollographql.com/pricing/).
+
+</Note>
+
+<ExperimentalFeature />
 
 GraphOS can notify your team's Slack workspace or Pagerduty instance whenever a particular metric (such as error rate) for a particular GraphQL operation exceeds a defined threshold. This is useful for detecting anomalies, especially following a release.
 
