--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -3,23 +3,27 @@ title: Forwarding metrics to Datadog
 description: Integrate your supergraph's performance metrics with Datadog
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 The **Apollo Datadog integration** enables you to forward your enterprise graph's performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
 
-> **Important:** GraphOS only forwards metrics for **named GraphQL operations**. Metrics for _anonymous_ operations are not forwarded. Make sure your graph's clients name all operations:
->
-> ```graphql
-> ❌
-> query {
->   hello
-> }
->
-> ✅
-> query HelloQuery {
->   hello
-> }
-> ```
+<Note>
+
+GraphOS only forwards metrics for **named GraphQL operations**. Metrics for _anonymous_ operations are not forwarded. Make sure your graph's clients name all operations:
+
+```graphql
+❌
+query {
+  hello
+}
+
+✅
+query HelloQuery {
+  hello
+}
+```
+
+</Note>
 
 ## Setup
 
@@ -57,7 +61,11 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
      width="600"
    />
 
-   > If you don't see a Datadog Forwarding section on this page, the feature isn't available as part of your organization's plan. Datadog forwarding requires an Enterprise plan.
+   <Note>
+
+   If you don't see a **Datadog Forwarding** section on this page, the feature isn't available as part of your organization's plan. Datadog forwarding requires an [Enterprise plan](https://www.apollographql.com/pricing/).
+
+   </Note>
 
 5. In the Datadog Forwarding section, click **Configure**. Provide your API key and region, then click **Enable**.
 
@@ -87,7 +95,11 @@ These metrics are aggregated in 60-second intervals and tagged with the GraphQL 
 
 These metrics are also tagged with both the associated Apollo graph ID (as `graph:<graph-id>`) and the associated variant name (as `variant:<variant-name>`). If you haven't set a variant name, then `current` is used.
 
-> If you set up your integration before October 2020, the metric names start with `apollo.engine.operations` instead of `apollo.operations`, and use a `service:<graph-id>` tag instead of `graph:<graph-id>`. This is called "legacy mode". You may transition your graph to modern mode by clicking the "Transition to modern mode" button on your graph's Integrations page. This is a one-way change; you should be prepared to update any dashboards and metrics to use the new metric and tag names when you click the button.
+<Note>
+
+If you set up your integration before October 2020, the metric names start with `apollo.engine.operations` instead of `apollo.operations`, and use a `service:<graph-id>` tag instead of `graph:<graph-id>`. This is called "legacy mode". You may transition your graph to modern mode by clicking the "Transition to modern mode" button on your graph's Integrations page. This is a one-way change; you should be prepared to update any dashboards and metrics to use the new metric and tag names when you click the button.
+
+</Note>
 
 ## Exploring metrics
 
