--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -12,7 +12,7 @@ When you're viewing your graph's [operation metrics](#usage-reporting), GraphOS 
   width="300"
 />
 
-> Though each operation in the above example is named 'MyQuery', GraphOS treats them as different operations because they request different fields.
+Though each operation in the above example is named 'MyQuery', GraphOS treats them as different operations because they request different fields.
 
 To help GraphOS identify functionally identical operations, your router generates the **signature** for each operation it reports to Studio. This signature is a normalized representation for an operation with deterministic field order, whitespace, and values for in-line argument values.
 
@@ -49,7 +49,11 @@ Helpfully, Apollo libraries use a [signature algorithm](#signature-algorithm) to
 
 ## Signature algorithm
 
-> ⚠️ **This algorithm is subject to change.** This article describes the signature algorithm as of the release of Apollo Server 3.6.1. It is provided here for informational purposes, not as a canonical specification.
+<Note>
+
+**This algorithm is subject to change.** This article describes the signature algorithm as of the release of Apollo Server 3.6.1. It is provided here for informational purposes, not as a canonical specification.
+
+</Note>
 
 Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-utils/blob/main/packages/usageReporting/src/signature.ts).
 
@@ -63,7 +67,11 @@ If an operation includes any in-line argument values, those values are transform
 - `Int` and `Float` values are replaced with `0`.
 - `String`, list, and object values are replaced with their "empty" counterpart (`""`, `[]`, or `{}`).
 
-> Argument values provided as GraphQL variable names are preserved.
+<Note>
+
+Argument values provided as GraphQL variable names are preserved.
+
+</Note>
 
 ### 2. Remove extraneous characters
 
@@ -77,7 +85,11 @@ If the operation document includes fragments that _aren't used_ by the executed 
 
 Any preserved fragment definitions appear _first_, sorted alphanumerically by fragment name. The definition of the executed operation appears after all fragment definitions.
 
-> Whenever the names of two sorted items are identical, the algorithm preserves the original order of those items relative to each other.
+<Note>
+
+Whenever the names of two sorted items are identical, the algorithm preserves the original order of those items relative to each other.
+
+</Note>
 
 #### Fields
 
@@ -143,7 +155,6 @@ query GetUser {
 The signature algorithm's primary purpose is to group together operations that differ only cosmetically (in terms of whitespace, field order, aliases, and so on). As an additional effect, the algorithm does [remove most in-line argument values](#1-transform-in-line-argument-values), which in theory helps maintain data privacy.
 
 **However, you should not rely on this!** Ideally, your sensitive data should never reach GraphOS Studio in the first place. Whenever possible, [use GraphQL variables](/react/data/operation-best-practices/#use-graphql-variables-to-provide-arguments) instead of in-line values for arguments. This helps you control exactly which values are reported to Apollo. For details, see [GraphOS Studio data privacy and compliance](../data-privacy/).
-
 
 ## Logging signatures at runtime
 To view operation signature hashes in your own logging tools, you can create an [Apollo Server plugin](/apollo-server/integrations/plugins/) that accesses hash values from the shared `context`. The relevant values are available in the `queryHash` and `operationName` properties:
