--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -9,7 +9,7 @@ GraphOS Studio offers a performant and intuitive UI to help you monitor and unde
 
 To analyze operation metrics in GraphOS Studio, you must first report them to GraphOS. If you have a [cloud supergraph](../quickstart/cloud), its router automatically reports operation metrics.
 
-If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics. The reporting mechanism is the same if you're using [Apollo Server](/apollo-server/) without the Apollo Router. If you're using a third-party server, you need to [set up a reporting agent](./sending-operation-metrics#from-a-third-party-server-advanced).
+If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics. The reporting mechanism is the same if you use [Apollo Server](/apollo-server/) without the Apollo Router. If you're using a third-party server, you need to [set up a reporting agent](./sending-operation-metrics#from-a-third-party-server-advanced).
 
 Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
@@ -17,7 +17,7 @@ Apollo also offers a [Datadog integration](./datadog-integration) to forward you
   text={`Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans).\n\nThe following require an [Enterprise plan](https://www.apollographql.com/pricing/):
 - Connecting a self-hosted router to GraphOS
 - Forwarding metrics to Datadog
-\n\nIf your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content)
+\n\nIf your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 `}
 />
 
@@ -35,7 +35,7 @@ Once you've configured your graph to send operation and field metrics to GraphOS
 The Insights page offers:
 
 - A collapsible left sidebar that acts as a paginated index of your graph's operations and fields, where you can search, filter, and sort operations and fields
-- An operations overview where you can adjust the overviews timeframe and filter it to specific clients
+- An operations overview where you can adjust the overview's timeframe and filter it to specific clients
 - Individual and overall operations performance metrics, including request rate and latency
 - [Resolver-level traces](./operations#resolver-level-traces), if you've configured them
 - Field usage metrics
