TN0007: Add Link to Enterprise best practices - Add link to Enterprise best practices: Testing Odyssey course

--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -4,6 +4,10 @@ id: TN0007
 tags: [client, server, federation, testing]
 ---
 
+> If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Testing](https://www.apollographql.com/tutorials/testing) course on Odyssey.
+>
+> Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 Testing in GraphQL may seem like it can involve more steps, but that is because your GraphQL architecture can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph. In practice, all of these areas should be properly tested the same way if we were using any other API technology, but often the testing across boundaries like teams or applications can involve some new steps. By the end of this guide you should have:
 
 - [Unit testing](#unit-testing) in individual subgraphs
