--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -3,10 +3,11 @@ title: Sending metrics to GraphOS
 description: Learn how to report operation and field usage metrics to GraphOS
 ---
 
-GraphOS Studio offers visualizations of metrics like request rate, latency, and more to help you analyze your supergraph's performance. Studio also lets you analyze how individual fields in your GraphQL requests are being used by clients. To analyze operation metrics and field usage in Studio, you first need to report them to GraphOS.
+GraphOS Studio offers visualizations of metrics like request rate, latency, and more to help you analyze your supergraph's performance. Studio also lets you analyze how clients are using individual fields in your GraphQL requests. To analyze operation metrics and field usage in Studio, you first need to report them to GraphOS.
 
 <EnterpriseFeature
-  text={`Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans). Connecting a self-hosted router to GraphOS requires an [Enterprise plan](https://www.apollographql.com/pricing/). If your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+  text={`- Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans).\n- Connecting a self-hosted router to GraphOS requires an [Enterprise plan](https://www.apollographql.com/pricing/).\n\n
+  If your organization doesn't currently have an Enterprise plan, you can test it out by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 `}
 />
 
@@ -18,13 +19,11 @@ How you report operation metrics to GraphOS depends on whether you're [using Apo
 
 Both the Apollo Router and Apollo Server use the same mechanism to enable operation metrics reporting to GraphOS:
 
-1. Obtain a **graph API key** from Studio.
+1. Obtain a **graph API key** from GraphOS Studio.
 
    <ObtainGraphApiKey />
 
-2. Obtain the **graph ref** for the graph and variant you want to report metrics for.
-
-   Your variant's graph ref is shown at the top of its README page in GraphOS Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
+2. Obtain the **graph ref** for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's README page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
 
 3. Use the obtained values to set the following environment variables in your environment _before_ starting up your router/server:
 
@@ -39,7 +38,7 @@ Consult your production environment's documentation to learn how to set its envi
 
 </Note>
 
-Now when your router or server starts up, it automatically begins reporting operation metrics to GraphOS.
+Now, when your router or server starts up, it automatically begins reporting operation metrics to GraphOS.
 
 ### From a third-party server (advanced)
 
@@ -54,7 +53,7 @@ Apollo Server defines its agent for performing these tasks in [the usage reporti
 
 <Note>
 
-If you're interested in collaborating with Apollo on creating a dedicated integration for your GraphQL server, please get in touch with us at **support@apollographql.com**.
+If you're interested in collaborating with Apollo on creating a dedicated integration for your GraphQL server, please contact us at **support@apollographql.com**.
 
 </Note>
 
@@ -66,11 +65,11 @@ The schema for this protocol buffer is defined as the `Report` message in [the p
 
 <Note>
 
-This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated metrics (released in Apollo Server 2.24), which leads to much more efficient reports. This document does not yet describe how to generate these metrics. It also does not describe how to support the "referencing operations" feature of [the Insights page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case prior to building their own reporting agent using this module.
+This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated metrics (released in Apollo Server 2.24), which leads to much more efficient reports. This document doesn't describe how to generate these metrics. It also doesn't describe how to support the "referencing operations" feature of [the Insights page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case before building their own reporting agent using this module.
 
 </Note>
 
-As a starting point, we recommend implementing an extension to the GraphQL execution that creates a report with a single trace, as defined in the `Trace` message of [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto). Then, you can batch multiple traces into a single report. We recommend sending batches approximately every 20 seconds, and limiting each batch to a reasonable size (~4MB).
+As a starting point, we recommend implementing an extension to the GraphQL execution that creates a report with a single trace, as defined in the `Trace` message of [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto). Then, you can batch multiple traces into a single report. We recommend sending batches approximately every 20 seconds and limiting each batch to a reasonable size (~4MB).
 
 <Note>
 
@@ -80,7 +79,7 @@ Many server runtimes already support emitting tracing information as a [GraphQL 
 
 #### Operation signing
 
-For GraphOS Studio to correctly group GraphQL queries, your reporting agent should define a function to generate a **query signature** for each distinct query. This can be challenging, because two _structurally_ different queries can be _functionally_ equivalent. For instance, all of the following queries request the same information:
+For GraphOS Studio to correctly group GraphQL queries, your reporting agent should define a function to generate an [operation signature](./operation-signatures) for each distinct operation. This can be challenging because two structurally different operations can be functionally equivalent. For instance, all of the following queries request the same information:
 
 ```graphql
 query AuthorForPost($foo: String!) {
@@ -129,7 +128,7 @@ https://usage-reporting.api.apollographql.com/api/ingress/traces
 Each batch should be sent as an HTTP POST request. The body of the request can be one of the following:
 
 - A binary serialization of a `Report` message
-- A _gzipped_ binary serialization of a `Report` message
+- A gzipped binary serialization of a `Report` message
 
 To authenticate with Studio, each request must include either:
 
@@ -142,7 +141,7 @@ The request can also optionally include a `Content-Type` header with value `appl
 
 <Caution>
 
-**The reporting endpoint rejects reports that are older than 50 minutes.** If you see an error like `Rejecting report from service {your service} with skewed timestamp`, make sure your traces are current and that your timestamp calculations are accurate.
+**The reporting endpoint rejects reports that are older than 50 minutes.** If you see an error like `Rejecting report from service {your service} with skewed timestamp`, ensure your traces are current and that your timestamp calculations are accurate.
 
 </Caution>
 
@@ -150,20 +149,20 @@ For a reference implementation, see the `sendReport()` function in the [TypeScri
 
 #### Tuning reporting behavior
 
-We recommend implementing retries with backoff when you encounter `5xx` responses or networking errors when communicating with the reporting endpoint. Additionally, implement a shutdown hook to make sure you push all pending reports before your server initiates a healthy shutdown.
+We recommend implementing retries with backoff when you encounter `5xx` responses or networking errors when communicating with the reporting endpoint. Additionally, implement a shutdown hook to ensure you push all pending reports before your server initiates a healthy shutdown.
 
 #### Implementing additional reporting features
 
-The reference TypeScript implementation includes several features that you might want to include in your implementation. All of these features are implemented in the usage reporting plugin itself, and are documented [the plugin's API reference](/apollo-server/api/plugin/usage-reporting/).
+The reference TypeScript implementation includes several features that you might want to include in your implementation. All of these features are implemented in the usage reporting plugin itself and are documented in [the plugin's API reference](/apollo-server/api/plugin/usage-reporting/).
 
 For example, you can restrict which information is sent to GraphOS, particularly to avoid reporting personal data. Because personal data most commonly appears in variables and headers, the TypeScript agent offers options to `sendVariablesValues` and `sendHeaders`.
 
 ## Reporting field usage metrics
 
-Your GraphQL router or server can report one or both of following field usage metrics:
+Your GraphQL router or server can report one or both of the following field usage metrics:
 
 - **Requests**: How many times an operation that requests a particular field has been observed
-- **Field executions**: How many times the resolver for a particular field has been executed
+- **Executions**: How many times the resolver for a particular field has been executed
 
 How you report these metrics to GraphOS depends on whether you're using the [Apollo Router](#from-the-apollo-router) or [Apollo Server](#from-apollo-server).
 
@@ -179,9 +178,9 @@ Apollo Server automatically reports field usage metrics as long as you follow th
 - To report requests:
 
   - Your GraphQL server must run Apollo Server 3.6 or later.
-  - If you have a [federated graph](/federation), your _gateway_ must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
+  - If you have a [federated graph](/federation), your gateway must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
 
-- To report field executions:
+- To report executions:
   - Your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
   - If you have a [federated graph](/federation), your subgraphs must support federated tracing. For compatible libraries, see the `FEDERATED TRACING` entry for libraries in [this table](/federation/building-supergraphs/supported-subgraphs/).
 
@@ -193,17 +192,17 @@ If some of your subgraphs support federated tracing and others don't, only execu
 
 #### Disabling execution metrics
 
-In Apollo Server 3.6 and later, you can disable field-level instrumentation for some or all operations by providing the [`fieldLevelInstrumentation` option to `ApolloServerPluginUsageReporting`](https://apollographql.com/docs/apollo-server/api/plugin/usage-reporting/#fieldlevelinstrumentation).
+In Apollo Server 3.6 and later, you can turn off field-level instrumentation for some or all operations by providing the [`fieldLevelInstrumentation` option to `ApolloServerPluginUsageReporting`](https://apollographql.com/docs/apollo-server/api/plugin/usage-reporting/#fieldlevelinstrumentation).
 
-Disabling field-level instrumentation for a particular request has the following effects:
+Turning off field-level instrumentation for a particular request has the following effects:
 
 - The request does not contribute to the "executions" statistic on the Insights page in Studio.
-- The request does not contribute to field-level execution timing hints that can be displayed in the Explorer and in VS Code.
+- The request does not contribute to field-level execution timing hints that can be displayed in the [GraphOS Studio Explorer](../explorer) and VS Code.
 - The request does not produce a trace that can be viewed in the [Traces section](/operations#resolver-level-traces) of the Insights page in Studio.
 
-These requests _do_ still contribute to most features of Studio, such as schema checks, the Insights page, and the "Request" metrics on the Insights page.
+These requests still contribute to most features of Studio, such as schema checks, the Insights page, and the "Request" metrics on the Insights page.
 
-To disable field-level instrumentation for _all_ requests, pass `() => false` as the `fieldLevelInstrumentation` option:
+To turn off field-level instrumentation for _all_ requests, pass `() => false` as the `fieldLevelInstrumentation` option:
 
 ```ts
 new ApolloServer({
@@ -237,11 +236,11 @@ If you do so, Apollo Server randomly chooses to enable field-level instrumentati
 
 <Caution>
 
-Make sure to pass a _number_ (like `0.01`), _not_ a function that always _returns_ the same number (like `() => 0.01`), which has a [different effect](#custom-sampling).
+Make sure to pass a number (like `0.01`), _not_ a function that always returns the same number (like `() => 0.01`), which has a [different effect](#custom-sampling).
 
 </Caution>
 
-In this case, whenever field-level instrumentation _is_ enabled for a particular request, Apollo Server reports it to Studio with a weight based on the given probability. The "executions" statistic on the Insights page (along with execution timing hints) is scaled by this weight.
+In this case, whenever field-level instrumentation is enabled for a particular request, Apollo Server reports it to Studio with a weight based on the given probability. The "executions" statistic on the Insights page (along with execution timing hints) is scaled by this weight.
 
 For example, if you pass `0.01`, your server enables field-level execution for approximately 1% of requests, and every observed execution is counted as 100 executions on the Insights page. (The actual observed execution count is available in a tooltip in the table.)
 
@@ -253,4 +252,4 @@ For example, you might want to enable field-level instrumentation more often for
 
 ### Performance considerations
 
-Calculating execution metrics can affect performance for large queries or high-traffic graphs. This is especially true for [federated graphs](/federation), because a subgraph includes each operation's full trace data in its response to the gateway.
+Calculating execution metrics can affect performance for large queries or high-traffic graphs. This is especially true for [federated graphs](/federation) because a subgraph includes each operation's full trace data in its response to the gateway.
