--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -4,6 +4,10 @@ id: TN0014
 tags: [contracts, schema-design]
 ---
 
+> If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Contracts](https://www.apollographql.com/tutorials/contracts) course on Odyssey.
+>
+> Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 [Contracts](/graphos/delivery/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
 
 There are three different filtering strategies you can use for a contract:
