Add examples of subtitle and description

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -1,6 +1,8 @@
 ---
 title: Apollo Docs
 toc: true
+subtitle: ' '
+description: Learn how Apollo GraphQL can help enterprise architects, API implementers, and client developers build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
 ---
 
 import {ButtonGroup, VStack} from '@chakra-ui/react';
